gün farkı fonksiyonu tamamlandı

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,8 +13,8 @@
     <div class="d-flex flex-column justify-content-center m-2 ">
         <input class="border border-2 border-primary-subtle rounded m-1 p-1" type="date" id="end-date" />
         <input class="border border-2 border-primary-subtle rounded m-1 p-1" type="date" id="start-date" />
-        <button class="btn btn-primary m-1 mb-2" onclick="calculateDateDifference()">Hesapla</button>
-        <input id="result">
+        <button id="calculate-btn" class="btn btn-primary m-1 mb-2" onclick="calculateDateDifference()">Hesapla</button>
+        <p id="result"></p>
     </div>
 
     <script src="popup.js"></script>
