--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,17 +10,34 @@
 </head>
 
 <body>
-    <div class="d-flex flex-column justify-content-center m-2 ">
-        <input class="border border-2 border-primary-subtle rounded m-1 p-1" type="date" id="end-date" />
-        <input class="border border-2 border-primary-subtle rounded m-1 p-1" type="date" id="start-date" />
-        <button id="calculate-btn" class="btn btn-primary m-1 mb-2" onclick="calculateDateDifference()">Hesapla</button>
-        <p id="result"></p>
-    </div>
+    <div class="d-flex flex-column justify-content-center m-2 me-3">
+        <select id="tool-selection" class="form-select border border-2 border-primary-subtle rounded col-12 m-1">
+            <option value="date-difference-opt">Gün Farkı</option>
+            <option value="brutten-nete-opt">Brüt => Net</option>
+            <option value="netten-brute-opt">Net => Brüt</option>
+        </select>
 
-    <script src="popup.js"></script>
+        <div id="date-difference">
+            <input class="border border-2 border-primary-subtle rounded m-1 p-1 pe-2 col-12" type="date"
+                id="end-date" />
+            <input class="border border-2 border-primary-subtle rounded m-1 p-1 pe-2 col-12" type="date"
+                id="start-date" />
+            <button id="calculate-btn" class="btn btn-primary m-1 mb-0 col-12">Hesapla</button>
+            <p id="result" class="text-center m-2"></p>
+        </div>
+
+        <div id="brutten-nete" style="display: none;">
+            <p>BRÜTTEN NETE TEST</p>
+        </div>
+
+        <div id="netten-brute" style="display: none;">
+            <p>NETTEN BRÜTE TEST</p>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="popup.js"></script>
 </body>
 
 </html>
