--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="popup.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="../modules/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Lawyer Tools</title>
 </head>
 
@@ -66,9 +65,7 @@
             <p>NETTEN BRÜTE TEST</p>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="../modules/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
     <script src="popup.js"></script>
 </body>
 
